--- a/talkies/templates/index.html
+++ b/talkies/templates/index.html
@@ -637,8 +637,8 @@
             <a href="/search"><i class="fas fa-film"></i></a>
             <a href="/search"><i class="fas fa-video"></i></a>
             <a href="/search"><i class="fas fa-compact-disc"></i></a>
-            <a href="/search"><i class="fas fa-couch"></i></a>
-            <a href="/search"><i class="fas fa-wine-glass"></i></a>
+            <a href="/genre/drama"><i class="fas fa-couch"></i></a>
+            <a href="/genre/romance"><i class="fas fa-wine-glass"></i></a>
           </div>
           
         </div>
