Commented the whole project
Added comments and explanations to make the code more readable.

--- a/talkies/templates/index.html
+++ b/talkies/templates/index.html
@@ -632,10 +632,10 @@
             </form>
           </div>
           <div class="top_cat">
-            <a href="/search"><i class="fas fa-ticket-alt"></i></a>
-            <a href="/search"><i class="fas fa-film"></i></a>
-            <a href="/search"><i class="fas fa-video"></i></a>
-            <a href="/search"><i class="fas fa-compact-disc"></i></a>
+            <a href="/search/?query=Action"><i class="fas fa-ticket-alt"></i></a>
+            <a href="/search/?query=Adventure"><i class="fas fa-film"></i></a>
+            <a href="/search/?query=Comedy"><i class="fas fa-video"></i></a>
+            <!-- <a href="/search"><i class="fas fa-compact-disc"></i></a> -->
             <a href="/genre/drama"><i class="fas fa-couch"></i></a>
             <a href="/genre/romance"><i class="fas fa-wine-glass"></i></a>
           </div>
